--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-select": "^3.0.8",
     "react-transition-group": "^4.3.0",
     "uuid": "^3.3.3"
   },
